# zoomrr

./: .gitignore  README.md
.cargo/: config.toml
crates/core-interface/: Cargo.toml
crates/core-interface/src/: lib.rs
crates/core-routes/: Cargo.toml
crates/core-routes/src/: lib.rs
crates/core-upload/: Cargo.toml
crates/core-upload/src/: lib.rs
crates/hyper-client/: Cargo.toml
crates/hyper-client/src/: lib.rs
crates/uploader/: Cargo.toml
crates/uploader-gdrive/: Cargo.toml
crates/uploader-gdrive/src/: lib.rs
crates/uploader-gdrive/tests/: upload.rs
crates/uploader-s3/: Cargo.toml
crates/uploader-s3/src/: lib.rs
crates/uploader/src/: lib.rs
crates/zoom-api-schema/: Cargo.toml
crates/zoom-api-schema/src/: lib.rs
crates/zoom-mime-types/: Cargo.toml
crates/zoom-mime-types/src/: lib.rs
crates/zoom-recording/: Cargo.toml
crates/zoom-recording/src/: lib.rs
crates/zoom-webhook-schema/: Cargo.toml
crates/zoom-webhook-schema/src/: lib.rs
crates/zoom-webhook-schema/src/endpoint/: url_validation.rs
crates/zoom-webhook-schema/src/recording/: completed.rs
crates/zoom-webhook-schema/tests/: parsing.rs
crates/zoom-webhook-schema/tests/snapshots/: parsing__endpoint_url_validation.snap  parsing__recording_completed.snap  parsing__webhook.snap
crates/zoom-webhook-validator/: Cargo.toml
crates/zoom-webhook-validator/src/: lib.rs
crates/zoom-webhook-validator/src/snapshots/: zoom_webhook_validator__tests__zoom_sample.snap
crates/zoomrr/: Cargo.toml
crates/zoomrr/src/: main.rs
testdata/samples/: endpoint.url_validation.json  recording.completed.json
