[package]
name = "core-routes"
version = "0.1.0"
edition = "2021"

[dependencies]
core-interface = { path = "../core-interface" }
zoom-webhook-schema = { path = "../zoom-webhook-schema" }
zoom-webhook-validator = { path = "../zoom-webhook-validator" }

axum = "0.6"
tokio = { version = "1" ,features = ["full"] }
tracing = "0.1"
