[package]
name = "core-upload"
version = "0.1.0"
edition = "2021"

[dependencies]
core-interface = { path = "../core-interface" }
hyper-client = { path = "../hyper-client" }
uploader = { path = "../uploader" }
zoom-recording = { path = "../zoom-recording" }
zoom-mime-types = { path = "../zoom-mime-types" }

tokio = { version = "1" ,features = ["full"] }
tracing = "0.1"
