[package]
name = "uploader-gdrive"
version = "0.1.0"
edition = "2021"

[dependencies]
uploader = { path = "../uploader" }
hyper-client = { path = "../hyper-client" }

async-trait = "0.1"
hyper = { version = "0.14", default-features = false, features = ["client"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", default-features = false, features = [] }
tracing = "0.1"
yup-oauth2 = "8"

[dev-dependencies]
envfury = "0.1"
tokio = { version = "1", features = ["macros", "rt"] }
